--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ dependencies = [
 [project.urls]
 homepage = "https://github.com/scikit-fingerprints/scikit-fingerprints"
 repository = "https://github.com/scikit-fingerprints/scikit-fingerprints"
-documentation = "https://scikit-fingerprints.github.io/scikit-fingerprints"
+documentation = "https://scikit-fingerprints.readthedocs.io/latest"
 "Bug Tracker" = "https://github.com/scikit-fingerprints/scikit-fingerprints/issues"
 
 [dependency-groups]
