--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,7 +33,7 @@ jobs:
         name: Cache venv
         with:
           path: ./.venv
-          key: ${{ matrix.os }}-venv-${{ hashFiles('**/uv.lock') }}
+          key: ${{ matrix.os }}-venv-${{ matrix.python-version }}-${{ hashFiles('**/uv.lock') }}
 
       - uses: actions/cache@v4
         name: Cache datasets
