--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,7 +42,7 @@ jobs:
           key: datasets
 
       - name: Install the project dependencies
-        run: uv sync --group test --python "$(which python)"
+        run: uv sync --group test --python "$(python -c 'import sys; print(sys.executable)')"
         shell: bash
 
       - name: Check pre-commit
