Move mypy config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,7 +72,7 @@ docs = [
     "ipython",
     "nbsphinx",
     "pydata-sphinx-theme",
-    "scikit-learn!=1.7.1",  # due to scikit-learn docs issue: https://github.com/microsoft/lightgbm/issues/6978
+    "scikit-learn!=1.7.1", # due to scikit-learn docs issue: https://github.com/microsoft/lightgbm/issues/6978
     "sphinx",
     "sphinx-copybutton"
 ]
@@ -93,6 +93,15 @@ filterwarnings = [
     "ignore:The total space of parameters.*:UserWarning",
     "ignore:Function auroc_score.*:FutureWarning"
 ]
+
+[tool.mypy]
+python_version = "3.10"
+check_untyped_defs = true  # check all functions, this fixes some tests
+allow_redefinition = true  # we redefine variables a lot for efficiency
+# most libraries used are not properly typed in Python, particularly RDKit
+ignore_missing_imports = true
+disable_error_code = ["import-untyped"]
+no_site_packages = true
 
 [tool.uv.build-backend]
 module-name = "skfp"
