--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,12 +29,16 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v7
 
+      - name: Set dataset cache dir
+        run: echo "SCIKIT_LEARN_DATA=$HOME/scikit_learn_data" >> $GITHUB_ENV
+        shell: bash
+
       - name: Cache datasets
         uses: actions/cache@v5
         with:
           # GitHub Actions can't create a cache key on dataset contents, so we use
           # dataset loader .py files instead
-          path: ~/scikit_learn_data
+          path: ${{ env.SCIKIT_LEARN_DATA }}
           key: ${{ hashFiles('skfp/datasets/**/*.py') }}
 
       - name: Install the project dependencies
