--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,21 +29,16 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v7
 
-      - uses: actions/cache@v5
-        name: Cache venv
+      - name: Cache datasets
+        uses: actions/cache@v5
         with:
-          path: ./.venv
-          key: ${{ matrix.os }}-venv-${{ matrix.python-version }}-${{ hashFiles('**/uv.lock') }}
-
-      - uses: actions/cache@v5
-        name: Cache datasets
-        with:
+          # GitHub Actions can't create a cache key on dataset contents, so we use
+          # dataset loader .py files instead
           path: ~/scikit_learn_data
-          key: datasets
+          key: ${{ hashFiles('skfp/datasets/**/*.py') }}
 
       - name: Install the project dependencies
-        run: uv sync --group test --python "$(python -c 'import sys; print(sys.executable)')"
-        shell: bash
+        run: uv sync --group test
 
       - name: Check pre-commit
         run: uv run pre-commit run --all-files
